fix: adjust font size for improved readability on mobile devices

--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ a:visited {
 /* mobile view */
 @media screen and (max-width: 768px){
   html{
-    font-size : 50.5%;
+    font-size : 45.0%;
   }
   body{
     margin: 0;
